AuthController: Login and Register

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
   "JWT": {
     "Issuer": "http://localhost",
     "Audience": "http://localhost",
-    "Key":  "AklasdajoDIAOJsdkadOOK"
+    "Key":  "4a6121a6a84f558sd4as6das8f4af5af"
   }
 }
