Avance en Auth Controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,8 @@
     "WebAPIContext": "Server=(localdb)\\mssqllocaldb;Database=WebAPIContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JWT": {
-    "Issuer": "http://localhost",
-    "Audience": "http://localhost",
+    "Issuer": "http://localhost:5073",
+    "Audience": "http://localhost:5073",
     "Key":  "4a6121a6a84f558sd4as6das8f4af5af"
   }
 }
